working on forms
Change-Id: I22abeb675b2548c26698e29a3770b9c6ffbf4ea2

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,2 +1,42 @@
-<h1>Activities#index</h1>
-<p>Find me in app/views/activities/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <h1 class="page-header text-center">Activities</h1>
+
+    <table class="table table-hover">
+      <tr> 
+        <th>Name</th>
+        <th>Date</th>
+        <th>Time</th>
+        <th>Location</th>
+        <th>View</th>
+        <th>Edit</th>
+        <th>Delete</th>
+      </tr>
+      <% @activities.each do |item| %>
+       <tr>
+          <td> <%= activity.name %> </td>
+          <td> <%= activity.date %> </td>
+          <td> <%= activity.time %> </td>
+          <td> $<%= activity.locatioon %> </td>
+
+          <td>
+            <%= link_to activity_path(activity.id), class: "btn btn-info" do %>
+              <i class="glyphicon glyphicon-eye-open"></i>
+            <% end %> 
+          </td>
+          <td>
+            <%= link_to edit_activity_path(activity.id), class: "btn btn-default" do %>
+              <i class="glyphicon glyphicon-pencil"></i>
+            <% end %>
+          </td>
+          <td>
+            <%= link_to activity_path(activity.id), method: :delete, class: "btn btn-warning" do %>
+              <i class="glyphicon glyphicon-trash"></i>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </table>
+       
+  </div>
+</div>
