--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Activities#show</h1>
-<p>Find me in app/views/activities/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <h1 class="page-header text-center">Show Activity</h1>
+    <p><%= @activity.name %></p>
+  </div>
+</div>
