--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -6,7 +6,7 @@
           <p>Name: <%= activity.text_field :name, class: 'form-control' %></p>
         </div>
         <div class="form-group">
-          <p>Date: <%= activity.text_area :date, class: 'form-control'%></p>
+          <p>Date: <%= activity.text_field :date, class: 'form-control'%></p>
         </div>
         <div class="form-group">
           <p>Time: <%= activity.text_field :time, class: 'form-control' %></p>
