--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -2,5 +2,7 @@
   <div class="row">
     <h1 class="page-header text-center">Show Activity</h1>
     <p><%= @activity.name %></p>
+      <%= link_to "Delete", activity_path(@activity.id), :class => "btn btn-danger", method: :delete %>
+      <%= link_to "Edit", edit_activity_path(@activity.id), :class => "btn btn-warning" %>
   </div>
 </div>
