--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,16 +5,18 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
 <header>
-  <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="btn btn-default navbar-btn">Sign in</button>
-      <%= link_to "Admin Login", new_admin_session_path %>
-    </div>
-  </div>
-  </nav>
+  <ul class="nav nav-pills">
+  <li role="presentation" class="active"><a href="root_path">Home</a></li>
+  <li role="presentation"><a href="new_admin_session_path">Admin Login</a></li>
+  <li role="presentation"><a href="new_teacher_session_path">Teacher Login</a></li>
+</ul>
 </header>
 
 <body>
