--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
   <li role="presentation" class="active"><a href="root_path">Home</a></li>
   <li role="presentation"><a href="new_admin_session_path">Admin Login</a></li>
   <li role="presentation"><a href="new_teacher_session_path">Teacher Login</a></li>
+  <li role="presentation"><a href="new_student_session_path">Student Login</a></li>
 </ul>
 </header>
 
