added the correct routes for sign ins
Change-Id: Ibf6823c7dc9c7b2d84c48ee3763f4fe909c23385

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,9 @@
 <header>
   <ul class="nav nav-pills">
   <li role="presentation" class="active"><a href="root_path">Home</a></li>
-  <li role="presentation"><a href="new_admin_session_path">Admin Login</a></li>
-  <li role="presentation"><a href="new_teacher_session_path">Teacher Login</a></li>
-  <li role="presentation"><a href="new_student_session_path">Student Login</a></li>
+  <li role="presentation"><a href="/admins/sign_in">Admin Login</a></li>
+  <li role="presentation"><a href="/teachers/sign_in">Teacher Login</a></li>
+  <li role="presentation"><a href="/students/sign_in">Student Login</a></li>
 </ul>
 </header>
 
