added activity tab and fixed route for home button
Change-Id: I22238c330144ab585681e62d795bfec57a63c833

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,11 @@
 </head>
 <header>
   <ul class="nav nav-pills">
-  <li role="presentation" class="active"><a href="root_path">Home</a></li>
-  <li role="presentation"><a href="/admins/sign_in">Admin Login</a></li>
-  <li role="presentation"><a href="/teachers/sign_in">Teacher Login</a></li>
-  <li role="presentation"><a href="/students/sign_in">Student Login</a></li>
+  <li role="presentation" class="active"><a href="/">Home</a></li>
+  <li role="presentation" class="active"><a href="/admins/sign_in">Admin Login</a></li>
+  <li role="presentation" class="active"><a href="/teachers/sign_in">Teacher Login</a></li>
+  <li role="presentation" class="active"><a href="/students/sign_in">Student Login</a></li>
+  <li role="presentation" class="active"><a href="/activities">List of Activities</a></li>
 </ul>
 </header>
 
