--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,15 +12,14 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
 <header>
-  <ul class="nav nav-pills">
-  <li role="presentation" class="active"><a href="/">Home</a></li>
-  <li role="presentation" class="active"><a href="/admins/sign_in">Admin Login</a></li>
-  <li role="presentation" class="active"><a href="/teachers/sign_in">Teacher Login</a></li>
-  <li role="presentation" class="active"><a href="/students/sign_in">Student Login</a></li>
-  <li role="presentation" class="active"><a href="/activities">List of Activities</a></li>
-</ul>
+  <ul class="nav nav-pills" role="group">
+    <li role="presentation"><a href="/">Home</a></li>
+    <li role="presentation"><a href="/admins/sign_in">Admin Login</a></li>
+    <li role="presentation"><a href="/teachers/sign_in">Teacher Login</a></li>
+    <li role="presentation"><a href="/students/sign_in">Student Login</a></li>
+    <li role="presentation"><a href="/activities">List of Activities</a></li>
+  </ul>
 </header>
-
 <body>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
