--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -12,25 +12,25 @@
         <th>Edit</th>
         <th>Delete</th>
       </tr>
-      <% @activities.each do |item| %>
+      <% @activities.each do |activity| %>
        <tr>
-          <td> <%= item.name %> </td>
-          <td> <%= item.date %> </td>
-          <td> <%= item.time %> </td>
-          <td> <%= item.location %> </td>
+          <td> <%= activity.name %> </td>
+          <td> <%= activity.date %> </td>
+          <td> <%= activity.time %> </td>
+          <td> <%= activity.location %> </td>
 
           <td>
-            <%= link_to activity_path(activity.id), class: "btn btn-info" do %>
+            <%= link_to activity_path(activity), class: "btn btn-info" do %>
               <i class="glyphicon glyphicon-eye-open"></i>
             <% end %> 
           </td>
           <td>
-            <%= link_to edit_activity_path(activity.id), class: "btn btn-default" do %>
+            <%= link_to edit_activity_path(activity), class: "btn btn-default" do %>
               <i class="glyphicon glyphicon-pencil"></i>
             <% end %>
           </td>
           <td>
-            <%= link_to activity_path(activity.id), method: :delete, class: "btn btn-warning" do %>
+            <%= link_to activity_path(activity), method: :delete, class: "btn btn-warning" do %>
               <i class="glyphicon glyphicon-trash"></i>
             <% end %>
           </td>
