broken links need fixing
Change-Id: I60a4918cde7687c763efdeea34634a0d7d72af60

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
     <li role="presentation"><a href="/teachers/sign_in">Teacher Login</a></li>
     <li role="presentation"><a href="/students/sign_in">Student Login</a></li>
     <li role="presentation"><a href="/activities">List of Activities</a></li>
+    <li role="presentation"><a href="/admins/invitation/new">invitation link</a></li>
   </ul>
 </header>
 <body>
