--- a/app/views/devise/invitations/new.html.erb
+++ b/app/views/devise/invitations/new.html.erb
@@ -15,7 +15,7 @@
   <p><%= f.submit t("devise.invitations.new.submit_button") %></p>
 <% end %>
 
-<h2>Send Student invitation</h2>
+<h2>Send Teacher invitation</h2>
 
 <%= form_for resource, :as => resource_name, :url => invitation_path(resource_name, account: 'teacher'), :html => {:method => :post}, account: 'teacher' do |f| %>
   <%= devise_error_messages! %>
