--- a/app/views/admin_loged_in/show.html.erb
+++ b/app/views/admin_loged_in/show.html.erb
@@ -1,2 +1,3 @@
 <h1>AdminLogedIn#show</h1>
 <p>Find me in app/views/admin_loged_in/show.html.erb</p>
+<%=link_to("logout", destroy_admin_session_path, method: :delete) %>
