--- a/app/views/teacher_loged_in/index.html.erb
+++ b/app/views/teacher_loged_in/index.html.erb
@@ -1,2 +1,3 @@
 <h1>TeacherLogedIn#index</h1>
 <p>Find me in app/views/teacher_loged_in/index.html.erb</p>
+<%=link_to("logout", destroy_admin_session_path, method: :delete) %>
