--- a/app/assets/stylesheets/teacher_loged_in.scss
+++ b/app/assets/stylesheets/teacher_loged_in.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the teacher_loged_in controller here.
+// Place all the styles related to the teacher_logged_in controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
